--- a/.github/workflows/lo-test.yml
+++ b/.github/workflows/lo-test.yml
@@ -6,7 +6,7 @@ on:
     inputs:
       device:
         description: 'select device to build'
-        default: 'r2s'
+        default: 'r1p-lts'
         required: false
       branch:
         description: 'seleclt openwrt branch'
@@ -22,7 +22,7 @@ jobs:
       DEVICE: ${{ github.event.client_payload.device || github.event.inputs.device }}
       BRANCH: ${{ github.event.client_payload.branch || github.event.inputs.branch }}
       TG: ${{ secrets.TELEGRAM_BOT_TOKEN }}
-    if: github.repository_owner=='klever1988'
+    if: github.repository_owner=='hong0980'
 
     steps:
 
